--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -23,3 +23,7 @@ h1 {
 	text-align: center;
 	color: white;
 }
+
+.hero {
+	width: 100%;     height: 0;     padding-bottom: 62%;     background: transparent url(./images/fashion.jpg) no-repeat center top;     background-size: cover;     overflow: hidden;     position: relative;
+}
