--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,5 +25,11 @@ h1 {
 }
 
 .hero {
-	width: 100%;     height: 0;     padding-bottom: 62%;     background: transparent url(./images/fashion.jpg) no-repeat center top;     background-size: cover;     overflow: hidden;     position: relative;
+	width: 100%;     
+	height: 0;     
+	padding-bottom: 62%;     
+	background: transparent url(./images/fashion.jpg) no-repeat center top;     
+	background-size: cover;     
+	overflow: hidden;     
+	position: relative;
 }
