--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,11 +25,12 @@ h1 {
 }
 
 .hero {
-	width: 100%;     
-	height: 0;     
-	padding-bottom: 62%;     
-	background: transparent url(./images/fashion.jpg) no-repeat center top;     
-	background-size: cover;     
-	overflow: hidden;     
-	position: relative;
+	background-image: url(http://canders82.github.io/unit_3/images/fashion.jpg);
+	background-repeat: no-repeat;
+	background-position: top center;
+	background-size:cover;
+	width: 100%;
+	height: 0;
+	padding-bottom: 60%;
+	overflow: hidden;
 }
